# scopes-rs

./: CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: test.yaml
examples/: advanced_derive.rs  hierarchical-scopes.rs  macros-poc.rs  readme.rs  verify-policy.rs
scopes-macros/: Cargo.toml
scopes-macros/src/: hierarchy.rs  lib.rs  scope.rs
scopes-macros/src/hierarchy/: hierarchy.rs  inclusion_graph.rs  mod.rs  tests.rs
scopes-macros/src/scope/: mod.rs  opts.rs  scope.rs  scope_impl.rs
src/: error.rs  hierarchy.rs  lib.rs  policy.rs  scope.rs
src/policy/: builder.rs  mod.rs  policy.rs  tests.rs
tests/: test-defaults.rs  test-hierarchy.rs  test-options.rs
