[workspace]
members = [
    "scopes-macros",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[package]
name = "scopes-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]

# Enable Hierarchized trait and scopes hierarchy
hierarchy = ["scopes-macros/hierarchy"]

# Enable additional traits for debugging, such as deriving Debug on the Policy enum
debug = []

[dependencies]
scopes-macros = { path = "./scopes-macros" }
