[workspace]
members = [
    "scopes-macros",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["aripot007"]
repository = "https://github.com/aripot007/scopes-rs"

[package]
name = "scopes-rs"
description = "Strongly typed scoped authorization library"
keywords = ["scope", "authorization"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
exclude = [
    ".vscode/*"
]

[package.metadata.docs.rs]
all-features = true

[features]

# Enable Hierarchized trait and scopes hierarchy
hierarchy = ["scopes-macros/hierarchy"]

[dependencies]
scopes-macros = { version = "0.1.0", path = "./scopes-macros" }

[dev-dependencies]
strum = { version = "0.27.2", features = ["derive"] }
