[package]
name = "scopes-macros"
description = "Macros for scopes-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
license.authors = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[features]
hierarchy = []

[dependencies]
darling = "0.23.0"
proc-macro2 = "1.0.104"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["extra-traits"] }
